Closes #27, #18. Fixed card spacing and changed card text to links.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -137,3 +137,13 @@
   margin-bottom: .5rem;
   font-weight: 300;
 }
+
+.card a {
+  text-decoration: none;
+  color: #212121;
+}
+
+.card a:hover {
+  text-decoration: none;
+  color: #212121;
+}
